# nlp

./: .gitignore  .pre-commit-config.yaml  .prettierignore  CLAUDE.md  CONVENTIONS.md  Dockerfile  MakeMoreMLP.ipynb  Pipfile  PlayEmbed.ipynb  PlayJournal.ipynb  PlayNLP.ipynb  README.md  TF-IFD.ipynb  TopicModelling.ipynb  ai_talk.py  alpaca_lora.py  askig_build_logic.py  askig_logic.py  askig_models.py  bestie-bot.py  bestie.py  bestie_bot.py  build_indexes.py  captions.py  changes.py  changes2.py  cloud.py  coding_llms.ipynb  commit.py  convention.md  crawl_site.py  diarize.py  discord_helper.py  docker_improv_bot  docker_qa_bot  dump_grateful.py  ell_helper.py  eulogy.convo.md  fabric.py  fix.py  (+48 more)
.claude/: settings.json  settings.local.json
.cursor/rules/: 850-clean-commits.mdc  uv-shebang-deps.mdc
.github/workflows/: test-with-count-badge.yml.example  test.yml
assets/: report-2022-04-10.json
convos/: default.convo  default.convo.md  lifecoach.convo.md  python_cli.convo  shrink.convo.md
cursor-logs/: fix-changes-command.md  reorganizing-gist-files-and-links.md  update-commit-and-skip-cursor-logs.md
eval-improv-bot/: promptfooconfig.yaml  threethings.json
eval/commit/: diff_commit.json  promptfooconfig.yaml
eval/depressed_programmer/: pf-depressed-programmer.yaml  promptfooconfig.yaml
eval/eng-feedback/: promptfooconfig.yaml
eval/markdown-merge/: pf_markdown-merge.yaml  promptfooconfig.yaml
generate-chats/: promptfooconfig.yaml
modal_readonly/: tony_assistant_spec.json  tony_save.json  tony_system_prompt.md
prd/: convo_processing.md  life-insights.md  life-insights.md 
py_generated/: PlayNLP.py  TF-IFD.py
tests/: test_ell_helper.py  test_kimi_integration_slow.py  test_langchain_helper.py
tests/e2e/: __init__.py  test_all_models_joke.py  test_commit_subprocess.py  test_kimi_e2e.py
tests/think/: test_think.py
zz-chop-logs/: 2025-02-25_12-47-update-anthropic-model-configuration.md
