[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idvorkin_nlp"
version = "0.1.0"
dependencies = [
    "icecream",
    # "ell-ai", #groan This need numpy > 2, which no one supports yet. BLEH, manual hacks time
    "rich",
    "pydantic",
    "loguru",
    "langchain-core",
    "sparklines",
    "langchain-chroma",
    "langchain_community",
    "langchain-openai",
    "langchain-groq",
    "pandas",
    "elevenlabs",
    "langchain-google-genai",
    "langchain-google-genai",
    "pyobjc; sys_platform == 'darwin'",
    "langchain_anthropic",
    "replicate",
    "twilio",
    "sounddevice",
    "soundfile",
    "backoff",
    "httpx",
    "typing-extensions",
    "assemblyai",
    "openai",
    "pudb",
    "py-cord",
    # jupyter-ai hasn't been much fun :(
    # "jupyter-ai",
    "langchainhub",
    "typer",
    "tiktoken",
    "ruff",
    "asyncer",
    "html2text",
    "fastapi",
    "chromadb",
    "beautifulsoup4",
    "azure-cosmos",
    "torch; sys_platform == 'darwin'", # Can't afford to install it on my cloud VM's too massive
    "matplotlib",
    "pydub",
    "numpy"
]

[tool.setuptools]
py-modules = ["gpt3", "bestie", "life", "igor_journal", "dump_grateful", "improv", "openai_wrapper", "langchain_helper", "tts", "pbf", "commit", "play_langchain", "changes", "changes2", "fix", "illustrate", "think", "vapi_sim", "pell", "pchanges", "recognize", "parse_week"]

[project.scripts]
gpt = "gpt3:app"
think = "think:app"
pell = "pell:app"
pchanges = "pchanges:app"
gpt3 = "gpt3:app"
ij = "igor_journal:app"
dg = "dump_grateful:app"
improv = "improv:app"
plc = "play_langchain:app"
life = "life:app"
tts = "tts:app"
bestie = "bestie:app"
pbf = "pbf:app"
commit = "commit:app"
changes = "changes:app"
changes2 = "changes2:app"
fix = "fix:app"
parse_week = "parse_week:app"
fabric = "fabric:app"
illustrate = "illustrate:app"
vapi_sim = "vapi_sim:app"
recognize = "recognize:app"

[tool.pyright]
# ...
venvPath = "."
venv = ".venv"

[tool.uv]
dev-dependencies = [
    "jupyterlab>=4.2",
    "jupyterlab-lsp",
    "jupyter_contrib_nbextensions",
    "nbdime",
    "pytest",
]
